--- a/inventories/aws.template
+++ b/inventories/aws.template
@@ -23,6 +23,11 @@
       "AllowedValues" : [ "t1.micro", "t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "m1.small", "m1.medium", "m1.large", "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "m4.large", "m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m4.10xlarge", "c1.medium", "c1.xlarge", "c3.large", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.large", "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "g2.2xlarge", "g2.8xlarge", "r3.large", "r3.xlarge", "r3.2xlarge", "r3.4xlarge", "r3.8xlarge", "i2.xlarge", "i2.2xlarge", "i2.4xlarge", "i2.8xlarge", "d2.xlarge", "d2.2xlarge", "d2.4xlarge", "d2.8xlarge", "hi1.4xlarge", "hs1.8xlarge", "cr1.8xlarge", "cc2.8xlarge", "cg1.4xlarge"]
 ,
       "ConstraintDescription" : "must be a valid EC2 instance type."
+    },
+    "GroupName": {
+      "Description" : "SecurityGroupName",
+      "Type": "String",
+      "ConstraintDescription" : "The name of the security group."
     }
 
   },
@@ -60,16 +65,6 @@
 			}
 		},
 
-    "SubnetB": {
-			"Type": "AWS::EC2::Subnet",
-			"Properties": {
-				"AvailabilityZone": "us-west-1c",
-        "VpcId": { "Ref" : "VPC" },
-				"CidrBlock": "10.251.16.0/24",
-				"MapPublicIpOnLaunch": true
-			}
-		},
-
     "RouteTable": {
 			"Type": "AWS::EC2::RouteTable",
 			"Properties": {
@@ -95,18 +90,11 @@
 			}
 		},
 
-		"SubnetBRouteTableAssociation": {
-			"Type": "AWS::EC2::SubnetRouteTableAssociation",
-			"Properties": {
-				"RouteTableId": { "Ref" : "RouteTable" },
-        "SubnetId": { "Ref" : "SubnetB" }
-			}
-		},
-
     "EC2Instance" : {
       "Type" : "AWS::EC2::Instance",
       "Properties" : {
         "InstanceType" : { "Ref" : "InstanceType" },
+        "SecurityGroupIds" : [ { "Ref" : "InstanceSecurityGroup" } ],
         "SubnetId" : { "Ref" : "SubnetA" },
         "KeyName" : { "Ref" : "KeyName" },
         "ImageId" : { "Ref" : "AMI" }
@@ -116,6 +104,7 @@
     "InstanceSecurityGroup" : {
       "Type" : "AWS::EC2::SecurityGroup",
       "Properties" : {
+        "GroupName" : { "Ref" : "GroupName" },
         "GroupDescription" : "Enable SSH access via port 22, 80 and 8080",
         "VpcId": { "Ref" : "VPC" },
         "SecurityGroupIngress" : [{
