--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,4 @@
 ---
-- import_playbook: provision.yml
-#- import_playbook: setup.yml
+- import_playbook: ./inventories/provision.yml
+- import_playbook: ./setup.yml
+- import_playbook: ./inventories/deprovision.yml
