--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ deploy_staging:
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - ansible-playbook ./infrastructure/site.yml --tags provision,setup
+    - ansible-playbook ./infrastructure/site.yml --connection=local --tags provision,setup
   environment:
     name: staging
 
@@ -80,7 +80,7 @@ rollback_staging:
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - ansible-playbook ./infrastructure/site.yml --tags deprovision
+    - ansible-playbook ./infrastructure/site.yml --connection=local --tags deprovision
   environment:
     name: staging
   when: manual
