--- a/infrastructure/inventories/provision.yml
+++ b/infrastructure/inventories/provision.yml
@@ -43,5 +43,5 @@
       groups: web
       ansible_user: centos
       ansible_host: "{{stack.stack_outputs.PublicIP}}"
-      ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
+      # ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
     with_items: "{{ ec2_facts.instances }}"
