--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,11 @@ stages:
 - deploy
 - regression test deploy
 
+variables:
+  TOWER_CLI_HOST: $TOWER_CLI_HOST
+  TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
+  TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+
 build_code:
   stage: build code
   script:
@@ -62,7 +67,11 @@ build_code:
 
 deploy_staging:
   stage: deploy
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.2.0
+  before_script:
+    - tower-cli config host $TOWER_CLI_HOST
+    - tower-cli config username $TOWER_CLI_USERNAME
+    - tower-cli config password $TOWER_CLI_PASSWORD
   script:
     - tower-cli job launch --job-template site-prov
   environment:
@@ -70,7 +79,11 @@ deploy_staging:
 
 rollback_staging:
   stage: regression test deploy
-  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.0.0
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.2.0
+  before_script:
+    - tower-cli config host $TOWER_CLI_HOST
+    - tower-cli config username $TOWER_CLI_USERNAME
+    - tower-cli config password $TOWER_CLI_PASSWORD
   script:
     - cd ./infrastructure
     - tower-cli job launch --job-template site-deprov
