--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,7 @@ deploy_staging:
     - tower-cli config host $TOWER_CLI_HOST
     - tower-cli config username $TOWER_CLI_USERNAME
     - tower-cli config password $TOWER_CLI_PASSWORD
+    - tower-cli config verify_ssl false
   script:
     - tower-cli job launch --job-template site-prov
   environment:
@@ -84,6 +85,7 @@ rollback_staging:
     - tower-cli config host $TOWER_CLI_HOST
     - tower-cli config username $TOWER_CLI_USERNAME
     - tower-cli config password $TOWER_CLI_PASSWORD
+    - tower-cli config verify_ssl false
   script:
     - cd ./infrastructure
     - tower-cli job launch --job-template site-deprov
