--- a/infrastructure/group_vars/all.yml
+++ b/infrastructure/group_vars/all.yml
@@ -4,4 +4,4 @@ ec2region : "us-west-1"
 stackname: "HelloWebui"
 keyname: "hellowebui_key"
 ami: "ami-070a1367"
-ec2_private_key_file: "inventories/hellowebui_key.pem"
+ec2_private_key_file: "hellowebui_key.pem"
