--- a/infrastructure/site.yml
+++ b/infrastructure/site.yml
@@ -1,4 +1,4 @@
 ---
-- import_playbook: ./inventories/provision.yml
+- import_playbook: ./provision.yml
 - import_playbook: ./setup.yml
-- import_playbook: ./inventories/deprovision.yml
+- import_playbook: ./deprovision.yml
