--- a/infrastructure/provision-test.yml
+++ b/infrastructure/provision-test.yml
@@ -24,5 +24,5 @@
       groups: test
       ansible_user: centos
       ansible_host: "{{item.public_ip_address}}"
-      ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
+      # ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
     with_items: "{{ ec2_test_facts.instances }}"
