--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -55,5 +55,5 @@
       groups: web
       ansible_user: centos
       ansible_host: "{{item.public_ip_address}}"
-      # ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
+      ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
     with_items: "{{ ec2_core_facts.instances }}"
