add project for functional test with selenium

--- a/hellowebui-functional-test/pom.xml
+++ b/hellowebui-functional-test/pom.xml
@@ -3,8 +3,18 @@
   <groupId>com.tests</groupId>
   <artifactId>hellowebui-functional-test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.3.RELEASE</version>
+  </parent>
   
   <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -22,6 +32,18 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+            <plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.tests.SpringBootConsoleApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>	
 			</plugin>
 		</plugins>
 	</build>
