--- a/infrastructure/group_vars/all.yml
+++ b/infrastructure/group_vars/all.yml
@@ -1,8 +1,8 @@
 ---
 # inventories/group_vars/back-end-servers
 ec2region : "us-west-1"
-#awstemplate : "aws.template"
-stackname: "HelloWebui"
+# awstemplate : "aws.template"
+# stackname: "HelloWebui"
 keyname: "hellowebui_key"
 ami: "ami-070a1367"
 ec2_private_key_file: "hellowebui_key.pem"
