--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ functional_test_service:
     - TESTER_IP="$(aws ec2 describe-instances --region us-west-1 --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar SUT_IP TESTER_IP
 
-    # - tower-cli job launch --job-template site-deprov --extra-vars="stackname=HelloWebuiTest" --wait
+    # - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=us-west-1 stackname=HelloWebuiTest" --wait
 
 # deploy_staging:
 #   stage: deploy
@@ -93,7 +93,7 @@ functional_test_service:
 #     - tower-cli config password $TOWER_CLI_PASSWORD
 #     - tower-cli config verify_ssl false
 #   script:
-#     - tower-cli job launch --job-template site-prov --extra-vars="awstemplate=aws.template stackname=HelloWebui" --wait
+#     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=us-west-1 awstemplate=aws.template stackname=HelloWebui" --wait
 #   environment:
 #     name: staging
 
@@ -107,7 +107,7 @@ functional_test_service:
 #     - tower-cli config verify_ssl false
 #   script:
 #     - cd ./infrastructure
-#     - tower-cli job launch --job-template site-deprov --extra-vars="stackname=HelloWebui" --wait
+#     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=us-west-1 stackname=HelloWebui" --wait
 #   environment:
 #     name: staging
 #   when: manual
