--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ variables:
   TOWER_CLI_HOST: $TOWER_CLI_HOST
   TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
   TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+  AWS_REGION: us-west-1
 
 build_code:
   stage: build code
@@ -74,15 +75,14 @@ functional_test_service:
     - tower-cli config password $TOWER_CLI_PASSWORD
     - tower-cli config verify_ssl false
   script:
-    - tower-cli job launch --job-template site-prov \
-      --extra-vars="ec2region=us-west-1 awstemplate=aws.test.template stackname=HelloWebuiTest" --wait
+    - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_REGION awstemplate=aws.test.template stackname=HelloWebuiTest" --wait
 
     - mvn clean package -f ./hellowebui-functional-test
-    - SUT_IP="$(aws ec2 describe-instances --region us-west-1 --filters "Name=tag:Role,Values=Core Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
-    - TESTER_IP="$(aws ec2 describe-instances --region us-west-1 --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
+    - SUT_IP="$(aws ec2 describe-instances --region $AWS_REGION --filters "Name=tag:Role,Values=Core Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
+    - TESTER_IP="$(aws ec2 describe-instances --region $AWS_REGION --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar SUT_IP TESTER_IP
 
-    # - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=us-west-1 stackname=HelloWebuiTest" --wait
+    # - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_REGION stackname=HelloWebuiTest" --wait
 
 # deploy_staging:
 #   stage: deploy
@@ -93,7 +93,7 @@ functional_test_service:
 #     - tower-cli config password $TOWER_CLI_PASSWORD
 #     - tower-cli config verify_ssl false
 #   script:
-#     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=us-west-1 awstemplate=aws.template stackname=HelloWebui" --wait
+#     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_REGION awstemplate=aws.template stackname=HelloWebui" --wait
 #   environment:
 #     name: staging
 
@@ -107,7 +107,7 @@ functional_test_service:
 #     - tower-cli config verify_ssl false
 #   script:
 #     - cd ./infrastructure
-#     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=us-west-1 stackname=HelloWebui" --wait
+#     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_REGION stackname=HelloWebui" --wait
 #   environment:
 #     name: staging
 #   when: manual
