--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,8 +81,8 @@ functional_test_service:
     #- tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_REGION awstemplate=aws.test.template stackname=HelloWebuiTest" --wait
 
     #- mvn clean package -f ./hellowebui-functional-test
-    - ls -la ~/.aws/config
-    - cat ~/.aws/config
+    - echo $AWS_ACCESS_KEY_ID
+    - echo $AWS_SECRET_ACCESS_KEY
     - SUT_IP="$(aws ec2 describe-instances --region $AWS_REGION --filters "Name=tag:Role,Values=Core Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
     - TESTER_IP="$(aws ec2 describe-instances --region $AWS_REGION --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
     #- java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar SUT_IP TESTER_IP
