--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,14 +78,14 @@ functional_test_service:
     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
     - export AWS_DEFAULT_REGION="us-west-1"
   script:
-    - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_REGION awstemplate=aws.test.template stackname=HelloWebuiTest" --wait
+    - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_DEFAULT_REGION awstemplate=aws.test.template stackname=HelloWebuiTest" --wait
 
     - mvn clean package -f ./hellowebui-functional-test
     - SUT_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Core Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
-    - TESTER_IP="$(aws ec2 describe-instances --region $AWS_REGION --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
+    - TESTER_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar SUT_IP TESTER_IP
 
-    - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_REGION stackname=HelloWebuiTest" --wait
+    - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebuiTest" --wait
 
 # deploy_staging:
 #   stage: deploy
@@ -96,7 +96,7 @@ functional_test_service:
 #     - tower-cli config password $TOWER_CLI_PASSWORD
 #     - tower-cli config verify_ssl false
 #   script:
-#     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_REGION awstemplate=aws.template stackname=HelloWebui" --wait
+#     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_DEFAULT_REGION awstemplate=aws.template stackname=HelloWebui" --wait
 #   environment:
 #     name: staging
 
@@ -110,7 +110,7 @@ functional_test_service:
 #     - tower-cli config verify_ssl false
 #   script:
 #     - cd ./infrastructure
-#     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_REGION stackname=HelloWebui" --wait
+#     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebui" --wait
 #   environment:
 #     name: staging
 #   when: manual
