--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,32 +85,32 @@ functional_test_service:
     - TESTER_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Test Instance" "Name=tag:aws:cloudformation:stack-name,Values=HelloWebuiTest" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar $SUT_IP $TESTER_IP
 
-    # - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebuiTest" --wait
+    - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebuiTest"
 
-# deploy_staging:
-#   stage: deploy
-#   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.2.0
-#   before_script:
-#     - tower-cli config host $TOWER_CLI_HOST
-#     - tower-cli config username $TOWER_CLI_USERNAME
-#     - tower-cli config password $TOWER_CLI_PASSWORD
-#     - tower-cli config verify_ssl false
-#   script:
-#     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_DEFAULT_REGION awstemplate=aws.template stackname=HelloWebui" --wait
-#   environment:
-#     name: staging
+deploy_staging:
+  stage: deploy
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.2.0
+  before_script:
+    - tower-cli config host $TOWER_CLI_HOST
+    - tower-cli config username $TOWER_CLI_USERNAME
+    - tower-cli config password $TOWER_CLI_PASSWORD
+    - tower-cli config verify_ssl false
+  script:
+    - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_DEFAULT_REGION awstemplate=aws.template stackname=HelloWebui" --wait
+  environment:
+    name: staging
 
-# rollback_staging:
-#   stage: regression test deploy
-#   image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.2.0
-#   before_script:
-#     - tower-cli config host $TOWER_CLI_HOST
-#     - tower-cli config username $TOWER_CLI_USERNAME
-#     - tower-cli config password $TOWER_CLI_PASSWORD
-#     - tower-cli config verify_ssl false
-#   script:
-#     - cd ./infrastructure
-#     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebui" --wait
-#   environment:
-#     name: staging
-#   when: manual
+rollback_staging:
+  stage: regression test deploy
+  image: iaghcp-docker-technical-architecture.jfrog.io/infrastructureascode:2.2.0
+  before_script:
+    - tower-cli config host $TOWER_CLI_HOST
+    - tower-cli config username $TOWER_CLI_USERNAME
+    - tower-cli config password $TOWER_CLI_PASSWORD
+    - tower-cli config verify_ssl false
+  script:
+    - cd ./infrastructure
+    - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebui"
+  environment:
+    name: staging
+  when: manual
