--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,8 @@ deploy_staging:
     - tower-cli config username $TOWER_CLI_USERNAME
     - tower-cli config password $TOWER_CLI_PASSWORD
     - tower-cli config verify_ssl false
+
+    - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - tower-cli job launch --job-template site-prov --extra-vars="ec2region=$AWS_DEFAULT_REGION awstemplate=aws.template stackname=HelloWebui" --wait
   environment:
@@ -108,6 +110,8 @@ rollback_staging:
     - tower-cli config username $TOWER_CLI_USERNAME
     - tower-cli config password $TOWER_CLI_PASSWORD
     - tower-cli config verify_ssl false
+
+    - export AWS_DEFAULT_REGION="us-west-1"
   script:
     - cd ./infrastructure
     - tower-cli job launch --job-template site-deprov --extra-vars="ec2region=$AWS_DEFAULT_REGION stackname=HelloWebui"
