--- a/infrastructure/aws.template
+++ b/infrastructure/aws.template
@@ -25,6 +25,12 @@
       "ConstraintDescription" : "must be a valid EC2 instance type."
     },
 
+    "Environment" : {
+      "Description" : "Tag to define the deployment environment",
+      "Type" : "String",
+      "ConstraintDescription" : "Deployment environment."
+    },
+
     "AWSRegion" : {
       "Description" : "AWS Region",
       "Type" : "String",
@@ -102,7 +108,7 @@
         "SubnetId" : { "Ref" : "SubnetA" },
         "KeyName" : { "Ref" : "KeyName" },
         "ImageId" : { "Ref" : "AMI" },
-        "Tags" : [ {"Key" : "Role", "Value" : "Core Instance"}]
+        "Tags" : [ {"Key" : "Role", "Value" : "Core Instance"}, {"Key" : "environment", "Value" : { "Ref" : "Environment" }}]
       }
     },
 
