--- a/infrastructure/aws.test.template
+++ b/infrastructure/aws.test.template
@@ -115,7 +115,7 @@
         "SubnetId" : { "Ref" : "SubnetA" },
         "KeyName" : { "Ref" : "KeyName" },
         "ImageId" : { "Ref" : "AMI" },
-        "Tags" : [ {"Key" : "Role", "Value" : "Core Instance"}]
+        "Tags" : [ {"Key" : "Role", "Value" : "Core Instance"}, {"Key" : "environment", "Value" : { "Ref" : "Test" }}]
       }
     },
 
@@ -127,8 +127,15 @@
         "SubnetId" : { "Ref" : "SubnetA" },
         "KeyName" : { "Ref" : "KeyName" },
         "ImageId" : {"Fn::FindInMap": [ "AWSRegionAMIEC2", { "Ref": "AWSRegion" },"CentOS"]},
-        "Tags" : [ {"Key" : "Role", "Value" : "Test Instance"}]
+        "Tags" : [ {"Key" : "Role", "Value" : "Test Instance"}, {"Key" : "environment", "Value" : { "Ref" : "Test" }}]
+        
       }
+    },
+
+    "Environment" : {
+      "Description" : "Tag to define the deployment environment",
+      "Type" : "String",
+      "ConstraintDescription" : "Deployment environment."
     },
 
     "InstanceSecurityGroup" : {
