--- a/infrastructure/provision.yml
+++ b/infrastructure/provision.yml
@@ -17,6 +17,7 @@
         KeyName: "{{ keyname }}"
         AMI: "{{ ami }}"
         AWSRegion: "{{ ec2region }}"
+        Environment: "{{ deploymentenv }}"
     register: stack
 
   - name: Get facts about all the newly created instances
@@ -36,7 +37,7 @@
   - name: Ensure all instances are ready
     wait_for:
       port: 22
-      host: "{{item.public_ip_address}}"
+      host: "{{ item.public_ip_address }}"
       search_regex: OpenSSH
     with_items: "{{ ec2_facts.instances }}"
 
@@ -51,9 +52,9 @@
 
   - name: Build group of core instances
     add_host:
-      name: "{{item.public_ip_address}}"
+      name: "{{ item.public_ip_address }}"
       groups: web
       ansible_user: centos
-      ansible_host: "{{item.public_ip_address}}"
+      ansible_host: "{{ item.public_ip_address }}"
       ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
     with_items: "{{ ec2_core_facts.instances }}"
