--- a/infrastructure/provision-test.yml
+++ b/infrastructure/provision-test.yml
@@ -8,10 +8,10 @@
   tasks:
   - name: Get facts about the test instances
     ec2_instance_facts:
-      region: "{{ ec2region }}"
+      region: "{{ cli_ec2region }}"
       filters:
         instance-state-name: running
-        "tag:aws:cloudformation:stack-name": "{{ stackname }}"
+        "tag:aws:cloudformation:stack-name": "{{ cli_stackname }}"
         "tag:Role": "Test Instance"
     register: ec2_test_facts
 
@@ -24,5 +24,5 @@
       groups: test
       ansible_user: centos
       ansible_host: "{{ item.public_ip_address }}"
-      ansible_ssh_private_key_file: "{{ ec2_private_key_file | default(omit) }}"
+      ansible_ssh_private_key_file: "{{ g_ec2_private_key_file | default(omit) }}"
     with_items: "{{ ec2_test_facts.instances }}"
