--- a/infrastructure/setup.yml
+++ b/infrastructure/setup.yml
@@ -6,3 +6,7 @@
   become: true
   roles:
     - role: apache-simple
+
+  tasks:
+    - name: Build locally
+      local_action: command cp ../hellowebui/index.html ./infrastructure/roles/apache-simple/templates/index.html.j2
